# bayesian-turbine-projections

./: LICENSE.txt  README.md  pyproject.toml
data/: README.md  at_annual.csv  de_annual.csv  energy_yield_propagation_samples.csv  gowires_reference_neighbors.csv  gowires_wind_climate.csv  us_annual.csv
notebooks/: 01_demo_us_pipeline.ipynb
scripts/: 00_run_all.py  01_download_data.py  02_prepare_data.py  03_run_fits.py  04_run_benchmarks.py  05_run_sensitivity.py  06_run_energy_yield.py  07_generate_figures.py  08_functional_form_comparison.py  08_prior_predictive.py  09_subsample_variability.py  10_prior_posterior_overlap.py  11_subsample_variability_rd_sp.py  12_cross_metric_correlation.py
src/turbine_projections/: bayesian_model.py  benchmarks.py  climate_scenarios.py  config.py  data_preparation.py  energy_yield.py  hindcast.py  plotting.py  sensitivity.py  uncertainty_decomp.py  utils.py
src/turbine_projections/scripts/: __init__.py  prepare_data.py
tests/: test_bayesian_model.py  test_data_preparation.py  test_energy_yield.py  test_smoke.py
